@@ -4,6 +4,7 @@
   * Handle corrupt/invalid chunks more gracefully
   * Changed default starting memory from 128MB to 256MB
   * World selection merged in with main options dialog
+  * Ability to select arbitrary directories to open worlds
 
 Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)
 
